--- a/client/package.json
+++ b/client/package.json
@@ -8,13 +8,16 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
+    "crypto-js": "^4.0.0",
+    "dotenv": "^10.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-table": "^6.0.0",
     "styled-components": "^5.3.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "which": "^2.0.2"
   },
   "scripts": {
     "start": "set PORT=8000 && react-scripts start",
