--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "array-flatten": "^3.0.0",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "crypto-js": "^4.0.0",
     "dotenv": "^10.0.0",
+    "hoist-non-react-statics": "^3.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
