--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.0.1",
     "crypto-js": "^4.0.0",
     "dotenv": "^10.0.0",
+    "history": "^5.0.0",
     "hoist-non-react-statics": "^3.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
